02-sg/main.tf
module "vpn"{
  source = "../terraform-aws-security-group"
  name        = var.project_name
  environment = var.environment
  sg_name = "vpn"
  sg_description = "SG for VPN"
  vpc_id      = data.aws_ssm_parameter.vpc_id.value
  #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "mongodb"{
  source = "../terraform-aws-security-group"
  name        = var.project_name
  environment = var.environment
  sg_name = "mongodb"
  sg_description = "SG for mongoDB"
  vpc_id      = data.aws_ssm_parameter.vpc_id.value
  #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "redis" {
  source = "../terraform-aws-security-group"
  project_name = var.project_name
  environment = var.environment
  sg_name = "redis"
  sg_description = "SG for redis"
  vpc_id = data.aws_ssm_parameter.vpc_id.value
  #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "mysql" {
  source = "../terraform-aws-security-group"
  project_name = var.project_name
  environment = var.environment
  sg_name = "mysql"
  sg_description = "SG for mysql"
  vpc_id = data.aws_ssm_parameter.vpc_id.value
  #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "rabbitmq" {
  source = "../terraform-aws-security-group"
  project_name = var.project_name
  environment = var.environment
  sg_name = "rabbitmq"
  sg_description = "SG for rabbitmq"
  vpc_id = data.aws_ssm_parameter.vpc_id.value
  #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "catalogue" {
  source = "../terraform-aws-security-group"
  name        = var.project_name
  environment = var.environment
  sg_name = "catalogue"
  sg_description = "SG for catalogue"
  vpc_id      = data.aws_ssm_parameter.vpc_id.value
  #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "user" {
  source = "../terraform-aws-security-group"
  name        = var.project_name
  environment = var.environment
  sg_name = "user"
  sg_description = "SG for user"
  vpc_id      = data.aws_ssm_parameter.vpc_id.value
  #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "cart" {
  source = "../terraform-aws-security-group"
  project_name = var.project_name
  environment = var.environment
  sg_name = "cart"
  sg_description = "SG for cart"
  vpc_id = data.aws_ssm_parameter.vpc_id.value
  #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "shipping" {
  source = "../terraform-aws-security-group"
  project_name = var.project_name
  environment = var.environment
  sg_name = "shipping"
  sg_description = "SG for shipping"
  vpc_id = data.aws_ssm_parameter.vpc_id.value
  #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "payment" {
  source = "../terraform-aws-security-group"
  project_name = var.project_name
  environment = var.environment
  sg_name = "payment"
  sg_description = "SG for payment"
  vpc_id = data.aws_ssm_parameter.vpc_id.value
  #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "web" {
  source = "../terraform-aws-security-group"
  project_name = var.project_name
  environment = var.environment
  sg_name = "web"
  sg_description = "SG for web"
  vpc_id = data.aws_ssm_parameter.vpc_id.value
  #sg_ingress_rules = var.cart_sg_ingress_rules
}

module "app_alb" {
  source = "../terraform-aws-security-group"
  project_name = var.project_name
  environment = var.environment
  sg_name = "app_alb"
  sg_description = "SG for APP Alb"
  vpc_id = data.aws_ssm_parameter.vpc_id.value
  #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

module "web_alb" {
  source = "../terraform-aws-security-group"
  project_name = var.project_name
  environment = var.environment
  sg_name = "web_alb"
  sg_description = "SG for Web ALB"
  vpc_id = data.aws_ssm_parameter.vpc_id.value
  #sg_ingress_rules = var.mongodb_sg_ingress_rules
}

resource "aws_security_group_rule" "app_alb_vpn" {
  source security_group_id = module.vpn.sg_id
  type              = "ingress"
  from_port         = 80
  to_port           = 80
  protocol          = "tcp"
  security_group_id = module.app_alb.sg_id
}
resource "aws_security_group_rule" "web_alb_internet" {
  cidr_blocks = ["0.0.0.0/0"]
  type              = "ingress"
  from_port         = 443
  to_port           = 443
  protocol          = "tcp"
  security_group_id = module.web_alb.sg_id
}

resource "aws_security_group_rule" "vpn_home" {
  security_group_id = module.vpn.sg_id
  type              = "ingress"
  from_port         = 0
  to_port           = 65535
  protocol          = "-1"
  cidr_blocks = ["0.0.0.0/0"]
}

resource "aws_security_group_rule" "mongodb_vpn" {
  source security_group_id = module.vpn.sg_id
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = module.mongodb.sg_id
}

resource "aws_security_group_rule" "mongodb_catalogue" {
  source security_group_id = module.catalogue.sg_id
  type              = "ingress"
  from_port         = 27027
  to_port           = 27017
  protocol          = "tcp" 
  security_group_id = module.mongodb.sg_id
}

resource "aws_security_group_rule" "mongodb_user" {
  source security_group_id = module.catalogue.sg_id
  type              = "ingress"
  from_port         = 27027
  to_port           = 27017
  protocol          = "tcp" 
  security_group_id = module.mongodb.sg_id
}

resource "aws_security_group_rule" "redis_vpn" {
  source security_group_id = module.vpn.sg_id
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp"
  security_group_id = module.redis.sg_id
}

resource "aws_security_group_rule" "redis_cart" {
  source security_group_id = module.cart.sg_id
  type              = "ingress"
  from_port         = 6379
  to_port           = 6379
  protocol          = "tcp"
  security_group_id = module.redis.sg_id
}

resource "aws_security_group_rule" "redis_user" {
  source security_group_id = module.user.sg_id
  type              = "ingress"
  from_port         = 6379
  to_port           = 6379
  protocol          = "tcp" 
  security_group_id = module.redis.sg_id
}

resource "aws_security_group_rule" "mysql_vpn" {
  source security_group_id = module.vpn.sg_id
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp" 
  security_group_id = module.mysql.sg_id
}

resource "aws_security_group_rule" "mysql_shipping" {
  source security_group_id = module.shipping.sg_id
  type              = "ingress"
  from_port         = 3306
  to_port           = 3306
  protocol          = "tcp" 
  security_group_id = module.mysql.sg_id
}

resource "aws_security_group_rule" "rabbitmq_vpn" {
  source security_group_id = module.vpn.sg_id
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp" 
  security_group_id = module.rabbitmq.sg_id
}

resource "aws_security_group_rule" "rabbitmq_payment" {
  source security_group_id = module.shipping.sg_id
  type              = "ingress"
  from_port         = 5672
  to_port           = 5672
  protocol          = "tcp" 
  security_group_id = module.rabbitmq.sg_id
}

resource "aws_security_group_rule" "catalogue_vpn" {
  source security_group_id = module.vpn.sg_id
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp" 
  security_group_id = module.catalogue.sg_id
}

resource "aws_security_group_rule" "catalogue_cart" {
  source security_group_id = module.cart.sg_id
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp" 
  security_group_id = module.catalogue.sg_id
}

resource "aws_security_group_rule" "catalogue_web" {
  source security_group_id = module.web.sg_id
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp" 
  security_group_id = module.catalogue.sg_id
}

resource "aws_security_group_rule" "user_vpn" {
  source security_group_id = module.vpn.sg_id
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp" 
  security_group_id = module.user.sg_id
}

resource "aws_security_group_rule" "user_web" {
  source security_group_id = module.web.sg_id
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp" 
  security_group_id = module.user.sg_id
}

resource "aws_security_group_rule" "user_payment" {
  source security_group_id = module.payment.sg_id
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp" 
  security_group_id = module.user.sg_id
}

resource "aws_security_group_rule" "cart_vpn" {
  source security_group_id = module.vpn.sg_id
  type              = "ingress"
  from_port         = 22
  to_port           = 22
  protocol          = "tcp" 
  security_group_id = module.cart.sg_id
}

resource "aws_security_group_rule" "cart_web" {
  source security_group_id = module.web.sg_id
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp" 
  security_group_id = module.cart.sg_id
}

resource "aws_security_group_rule" "cart_shipping" {
  source security_group_id = module.shipping.sg_id
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp" 
  security_group_id = module.cart.sg_id
}

resource "aws_security_group_rule" "cart_payment" {
  source security_group_id = module.payment.sg_id
  type              = "ingress"
  from_port         = 8080
  to_port           = 8080
  protocol          = "tcp" 
  security_group_id = module.cart.sg_id
}

resource "aws_security_group_rule" "shipping_vpn" {
  source_security_group_id = module.vpn.sg_id
  type                     = "ingress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"
  security_group_id        = module.shipping.sg_id
}

resource "aws_security_group_rule" "shipping_web" {
  source_security_group_id = module.web.sg_id
  type                     = "ingress"
  from_port                = 8080
  to_port                  = 8080
  protocol                 = "tcp"
  security_group_id        = module.shipping.sg_id
}

resource "aws_security_group_rule" "payment_vpn" {
  source_security_group_id = module.vpn.sg_id
  type                     = "ingress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"
  security_group_id        = module.payment.sg_id
}

resource "aws_security_group_rule" "payment_web" {
  source_security_group_id = module.web.sg_id
  type                     = "ingress"
  from_port                = 8080
  to_port                  = 8080
  protocol                 = "tcp"
  security_group_id        = module.payment.sg_id
}

resource "aws_security_group_rule" "web_vpn" {
  source_security_group_id = module.vpn.sg_id
  type                     = "ingress"
  from_port                = 22
  to_port                  = 22
  protocol                 = "tcp"
  security_group_id        = module.web.sg_id
}

resource "aws_security_group_rule" "web_internet" {
  cidr_blocks = ["0.0.0.0/0"]
  type                     = "ingress"
  from_port                = 80
  to_port                  = 80
  protocol                 = "tcp"
  security_group_id        = module.web.sg_id
}
